Moving smoke domain when additional resolution is increased causes blender to crash #49251

Closed
opened 2016-09-04 18:26:56 +02:00 by Miika Puustinen (miikap) · 4 comments

System Information
Windows 10 2xGTX960

Blender Version
Broken: 2.78RC1 0e5089c
Worked: (optional)
2.77 official

Short description of error
Blender crashes if Smoke Domain object is using Additional resolution from Adaptive Domain feature and the domain is moved up to better fit smoke sim.
It seems crashing happens when Flow object is purely in the area of "additional" domain cells.

You can also move the Flow object to the border area of the Domain (with additional resolution) to reproduce the crash.

Exact steps for others to reproduce the error

  1. Select the default Cube
  2. Spacebar --> Quick smoke
  3. Domain options: Tick on Smoke Adaptive Domain and increase Additional resolution to 32
  4. Move Domain object up 6 blender units
  5. Alt + A to play animation
**System Information** Windows 10 2xGTX960 **Blender Version** Broken: 2.78RC1 0e5089c Worked: (optional) 2.77 official **Short description of error** Blender crashes if Smoke Domain object is using Additional resolution from Adaptive Domain feature and the domain is moved up to better fit smoke sim. It seems crashing happens when Flow object is purely in the area of "additional" domain cells. You can also move the Flow object to the border area of the Domain (with additional resolution) to reproduce the crash. **Exact steps for others to reproduce the error** 1. Select the default Cube 2. Spacebar --> Quick smoke 3. Domain options: Tick on Smoke Adaptive Domain and increase Additional resolution to 32 4. Move Domain object up 6 blender units 5. Alt + A to play animation
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MiikaPuustinen

Added subscriber: @MiikaPuustinen

This issue was referenced by a31eca3fdd

This issue was referenced by a31eca3fdd0d2e18b73f180b87a4c77ac5a8da78

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49251
No description provided.